--- a/www/relnotes.html
+++ b/www/relnotes.html
@@ -103,7 +103,7 @@
                 <p style="margin-top: 5px;">
                     <b>Features and enhancements:</b><br>
                     <ul>
-                        <li>Sampling CPU and Memory profiler plugin (VisualVM-Sampler available on Plugin Center)
+                        <li>Sampling CPU and Memory profiler plugin (VisualVM-Sampler available on Plugins Center)
                         </li>
 
                         <li>Support for multiple <code>jstatd</code> connections on a single local/remote host
@@ -124,7 +124,7 @@
                         <li>Customizable proxy settings in Options dialog
                         </li>
 
-                        <li>UI for customizing SSL certificates in Options dialog (VisualVM-Security available on Plugin Center)
+                        <li>UI for customizing SSL certificates in Options dialog (VisualVM-Security available on Plugins Center)
                         </li>
 
                         <li>Enhanced JMX API to enable customizing JMX environment/connections by plugins
@@ -150,7 +150,7 @@
                                 <li>Computing retained size in HeapWalker
                                 </li>
 
-                                <li>OQL scripting support in HeapWalker (OQL Syntax Support (enhanced OQL editor) available on Plugin Center)
+                                <li>OQL scripting support in HeapWalker (OQL Syntax Support [enhanced OQL editor] available on Plugins Center)
                                 </li>
 
                                 <li>Thread stack traces at the heap dump in HeapWalker
