--- a/www/docindex.html
+++ b/www/docindex.html
@@ -77,6 +77,7 @@
                 <li><a href="coredumps.html">Working with Coredumps</a></li>
                 <li><a href="snapshots.html">Working with Snapshots</a></li>
                 <li><a href="heapdump.html">Browsing a Heap Dump</a></li>
+                <li><a href="oqlhelp.html">Analyzing a Heap Dump Using OQL</a></li>
                 <li><a href="jmx_connections.html">Connecting to JMX Agents Explicitly</a></li>
                 <li><a href="mbeans_tab.html">Working with MBeans</a></li>
                 <li><a href="jconsole_plugin_wrapper_tab.html">JConsole Plug-In Wrapper Tab</a></li>
