Download & Troubleshooting: describe the d3d crash on Windows 64bit
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2290 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/download.html
+++ b/www/download.html
@@ -84,6 +84,11 @@
                 </p>
                 
                 <ul>
+                     <li>
+                        <i>Java(TM) Platform SE binary has stopped working (Windows 64bit): </i>caused by a bug in d3d rendering pipeline, start the VisualVM using
+                        <code>visualvm.exe -J-Dsun.java2d.d3d=false</code>
+                    </li>
+
                     <li><i>VisualVM doesn't start: </i>there are several problems which could prevent VisualVM from starting without any visible reason:
                         <ul>
                             <li><i>The download is broken</i> - make sure you've got the correct bits (archive managers typically notify you when the archive is broken)</li>
