Download: point to Troubleshooting Guide for the d3d/win64 solution
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2292 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/download.html
+++ b/www/download.html
@@ -96,8 +96,8 @@
                     </li>
 
                     <li>
-                        <i>Java(TM) Platform SE binary has stopped working (Windows 64bit): </i>caused by a bug in d3d rendering pipeline, start the VisualVM using
-                        <code>visualvm.exe -J-Dsun.java2d.d3d=false</code>
+                        <i>Java(TM) Platform SE binary has stopped working (Windows 64bit): </i>caused by a bug in d3d rendering pipeline, see the
+                        <a href="troubleshooting.html#d3dwin64">Troubleshooting Guide</a> for more details and steps to fix the problem
                     </li>
                     
                     <li>
