--- a/www/relnotes.html
+++ b/www/relnotes.html
@@ -223,7 +223,7 @@
                     <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=148">Issue 148</a>: VisualVM hangs when lost remote connection
                     </li>
 
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=327">Issue 327</a>: Maximum value in Monitor charts is Integer.MAX_VALUE
+                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=327">Issue 327</a>: Maximum value in Monitor charts is Integer.MAX_VALUE (hotfix <a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=327">available</a>)
                     </li>
 
                     <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=120">Issue 120</a>: JMX application datasource cannot be reused on application restart
