--- a/www/releases.html
+++ b/www/releases.html
@@ -93,6 +93,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 6 Update 17</b><br><small style="margin-left: 10px;">Released: November 3rd, 2009, <a href="http://java.sun.com/javase/6/webnotes/6u17.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 16</b><br><small style="margin-left: 10px;">Released: August 12th, 2009, <a href="http://java.sun.com/javase/6/webnotes/6u16.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 6 Update 15</b><br><small style="margin-left: 10px;">Released: August 4th, 2009, <a href="http://java.sun.com/javase/6/webnotes/6u15.html">Release Notes</a></small></div>
