Mentioned Issue 333 in VisualVM 1.2 Release Notes
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2310 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/relnotes.html
+++ b/www/relnotes.html
@@ -217,6 +217,9 @@
             <h3>Known Problems</h3>
             <div>                
                 <ul>
+                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=333">Issue 333</a>: HeapWalker in VisualVM doesn't work with JDK 6 Update 17+
+                    </li>
+
                     <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=224">Issue 224</a>: Cannot memory profile JBoss AS 4.2.3.GA
                     </li>
 
