--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -123,6 +123,13 @@
             in the Remote Applications section of the <a href="description.html#remote_applications">Introduction to VisualVM</a> document.</p>
             <p><b>Known limitation:&nbsp;</b>In this VisualVM release the <code>jstatd</code>'s default <code>port</code> and <code>rminame</code> must
             be used when starting the <code>jstatd</code> utility, i.e. the use of the <code>-p</code> and <code>-n</code> options is not supported.</p><br>
+
+            <a name="6u17win"></a>
+            <h3>HeapWalker Throws Exceptions When Switching Views</h3>
+            <p><b>Description:&nbsp;</b>Switching views (Overview/Classes/Instances/OQL Console) in the HeapWalker throws <code>java.lang.IncompatibleClassChangeError</code>, UI is not repainted.</p>
+            <p><b>Resolution:&nbsp;&nbsp;</b>This happens when running the VisualVM on JDK 6 Update 17 and newer using the Windows LaF. Details and hotfix are available in
+                <a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=333">VisualVM bug #333</a>. A quick workaround is to change the look'n'feel using
+                <code>visualvm.exe --laf Metal</code> or <code>visualvm.exe --laf Nimbus</code> or use JDK 6 Update 16 (or previous) to run VisualVM.</p><br>
                 
             <a name="xshare"></a>
             <h3>Profiler Tab Shows Warning About Class Sharing, Profiling Does Not Work</h3>
