--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,11 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">November 9th, 2009:</span> VisualVM 1.2.1 released. This is purely a bugfix release, see the <a href="https://visualvm.dev.java.net/issues/buglist.cgi?Submit+query=Submit+query&component=visualvm&resolution=FIXED&target_milestone=1.2.1&email1=&emailtype1=exact&emailassigned_to1=1&email2=&emailtype2=exact&emailreporter2=1&issueidtype=include&issue_id=&changedin=&votes=&chfield=creation_ts&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=&short_desc_type=fulltext&long_desc=&long_desc_type=fulltext&issue_file_loc=&issue_file_loc_type=fulltext&status_whiteboard=&status_whiteboard_type=fulltext&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&order=Reuse+same+sort+as+last+time">list of fixed bugs</a>.
+                    The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release121"><code>release121</code></a> branch.
+                </p>
+
                 <p><span class="news_date">October 21st, 2009:</span> VisualVM 1.2 released. It introduces many new features
                     incl. sampling profiler, redesigned charts, enhanced <code>jstatd</code> support and customizable proxy settings.
                     The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
@@ -64,11 +69,6 @@
                     <a href="mailto:feedback@visualvm.dev.java.net?subject=VisualVM 1.2 Test Build Feedback">feedback@visualvm.dev.java.net</a>
                     or <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">file a bug report</a> into
                     the Issue Tracker (dev.java.net login is required).
-                </p>
-
-                <p><span class="news_date">August 13th, 2009:</span> Java VisualVM Blogging Contest results have been
-                    announced at <a href="http://java.sun.com/community/javavisualvm">http://java.sun.com/community/javavisualvm</a>.
-                    Congratulations to the winners and thanks to all participants!
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
