--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,11 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">August 13th, 2009:</span> Java VisualVM Blogging Contest results have been
+                    announced at <a href="http://java.sun.com/community/javavisualvm">http://java.sun.com/community/javavisualvm</a>.
+                    Congratulations to the winners and thanks to all participants!
+                </p>
+
                 <p><span class="news_date">June 23rd, 2009:</span> The Buffer Monitor plugin
                     has been released on VisualVM 1.1.1 Plugin Center. The plugin enables
                     monitoring usage of direct buffers created by <code>ByteBuffer.allocateDirect</code>
