--- a/www/releases.html
+++ b/www/releases.html
@@ -79,11 +79,21 @@
                         <tr><th><b>VisualVM</b></th><th><b>Corresponding Java&nbsp;VisualVM<br></b></th></tr>
                         <tr>
                             <td>
-                                <div><b>VisualVM 1.2</b><br><small style="margin-left: 10px;">Released: October 21st, 2009, <a href="relnotes.html">Release Notes</a></small></div>
+                                <div><b>VisualVM 1.2.1</b><br><small style="margin-left: 10px;">Released: November 9th, 2009, <a href="relnotes.html">Release Notes</a></small></div>
                             </td>
 
                             <td>
                                 <div>not released yet</div>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <div><b>VisualVM 1.2</b><br><small style="margin-left: 10px;">Released: October 21st, 2009, <a href="relnotes12.html">Release Notes</a></small></div>
+                            </td>
+
+                            <td>
+                                <div>not released</div>
                             </td>
                         </tr>
 
