OSGi plugin released
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2327 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,15 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">October 5th, 2009:</span> VisualVM 1.2 Test Build released as a public development
+                    build for testing and evaluation purposes (see the <a href="relnotes12tb.html">Release Notes</a>).
+                    <a href="https://visualvm.dev.java.net/files/documents/7163/143769/visualvm_12_testbuild.zip">Download it</a>,
+                    try out the new features and let the developers know: send your feedback to
+                    <a href="mailto:feedback@visualvm.dev.java.net?subject=VisualVM 1.2 Test Build Feedback">feedback@visualvm.dev.java.net</a>
+                    or <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">file a bug report</a> into
+                    the Issue Tracker (dev.java.net login is required).
+                </p>
+
                 <p><span class="news_date">August 13th, 2009:</span> Java VisualVM Blogging Contest results have been
                     announced at <a href="http://java.sun.com/community/javavisualvm">http://java.sun.com/community/javavisualvm</a>.
                     Congratulations to the winners and thanks to all participants!
