--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,12 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">November 20th, 2009:</span> The OSGi plugin
+                    has been released on VisualVM 1.2 & 1.2.1 Plugins Center. The plugin enables
+                    basic management of OSGi platforms via JMX. For detailed description and
+                    installation instructions visit the <a href="http://wiki.chameleon.ow2.org/xwiki/bin/view/Main/AdminTools">plugin page</a>.
+                </p>
+
                 <p><span class="news_date">November 9th, 2009:</span> VisualVM 1.2.1 released. This is purely a bugfix release, see the <a href="https://visualvm.dev.java.net/issues/buglist.cgi?Submit+query=Submit+query&component=visualvm&resolution=FIXED&target_milestone=1.2.1&email1=&emailtype1=exact&emailassigned_to1=1&email2=&emailtype2=exact&emailreporter2=1&issueidtype=include&issue_id=&changedin=&votes=&chfield=creation_ts&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=&short_desc_type=fulltext&long_desc=&long_desc_type=fulltext&issue_file_loc=&issue_file_loc_type=fulltext&status_whiteboard=&status_whiteboard_type=fulltext&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&order=Reuse+same+sort+as+last+time">list of fixed bugs</a>.
                     The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
                     <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release121"><code>release121</code></a> branch.
@@ -60,15 +66,6 @@
                     The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
                     <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release12"><code>release12</code></a>
                     branch. See the <a href="relnotes.html">Release Notes</a> for more information.
-                </p>
-
-                <p><span class="news_date">October 5th, 2009:</span> VisualVM 1.2 Test Build released as a public development
-                    build for testing and evaluation purposes (see the <a href="relnotes12tb.html">Release Notes</a>).
-                    <a href="https://visualvm.dev.java.net/files/documents/7163/143769/visualvm_12_testbuild.zip">Download it</a>,
-                    try out the new features and let the developers know: send your feedback to
-                    <a href="mailto:feedback@visualvm.dev.java.net?subject=VisualVM 1.2 Test Build Feedback">feedback@visualvm.dev.java.net</a>
-                    or <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">file a bug report</a> into
-                    the Issue Tracker (dev.java.net login is required).
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
