BTrace plugin on VisualVM Plugins Center
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2334 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,12 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">November 25th, 2009:</span> The BTrace plugin
+                    is now available on the VisualVM 1.2 & 1.2.1 Plugins Center. With this plugin
+                    you can create, deploy and save BTrace tracing scripts directly from the VisualVM. For more information
+                    visit the <a href="http://kenai.com/projects/btrace/pages/Home">plugin page</a>.
+                </p>
+
                 <p><span class="news_date">November 20th, 2009:</span> The OSGi plugin
                     has been released on VisualVM 1.2 & 1.2.1 Plugins Center. The plugin enables
                     basic management of OSGi platforms via JMX. For detailed description and
@@ -59,13 +65,6 @@
                 <p><span class="news_date">November 9th, 2009:</span> VisualVM 1.2.1 released. This is purely a bugfix release, see the <a href="https://visualvm.dev.java.net/issues/buglist.cgi?Submit+query=Submit+query&component=visualvm&resolution=FIXED&target_milestone=1.2.1&email1=&emailtype1=exact&emailassigned_to1=1&email2=&emailtype2=exact&emailreporter2=1&issueidtype=include&issue_id=&changedin=&votes=&chfield=creation_ts&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=&short_desc_type=fulltext&long_desc=&long_desc_type=fulltext&issue_file_loc=&issue_file_loc_type=fulltext&status_whiteboard=&status_whiteboard_type=fulltext&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&order=Reuse+same+sort+as+last+time">list of fixed bugs</a>.
                     The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
                     <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release121"><code>release121</code></a> branch.
-                </p>
-
-                <p><span class="news_date">October 21st, 2009:</span> VisualVM 1.2 released. It introduces many new features
-                    incl. sampling profiler, redesigned charts, enhanced <code>jstatd</code> support and customizable proxy settings.
-                    The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
-                    <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release12"><code>release12</code></a>
-                    branch. See the <a href="relnotes.html">Release Notes</a> for more information.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
