--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,13 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">October 21st, 2009:</span> VisualVM 1.2 released. It introduces many new features
+                    incl. sampling profiler, redesigned charts, enhanced <code>jstatd</code> support and customizable proxy settings.
+                    The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release12"><code>release12</code></a>
+                    branch. See the <a href="relnotes.html">Release Notes</a> for more information.
+                </p>
+
                 <p><span class="news_date">October 5th, 2009:</span> VisualVM 1.2 Test Build released as a public development
                     build for testing and evaluation purposes (see the <a href="relnotes12tb.html">Release Notes</a>).
                     <a href="https://visualvm.dev.java.net/files/documents/7163/143769/visualvm_12_testbuild.zip">Download it</a>,
