--- a/www/plugins.html
+++ b/www/plugins.html
@@ -108,9 +108,9 @@
                 <hr/>
 
                 <p><a href="images/btrace.jpg" rel="lightbox[plugins]" title="BTrace Plugin."><img src="images/btrace_thumb.jpg"/></a><b>BTrace Plugin.</b>
-                BTrace is a dynamic tracing tool for Java. BTrace inserts tracing actions into the classes of a running Java program and hotswaps the traced program classes. Visit
+                BTrace is a dynamic tracing tool for Java. With this plugin you can create, deploy and save BTrace tracing scripts directly from the VisualVM. Visit
                 <a href="http://kenai.com/projects/btrace">http://kenai.com/projects/btrace</a> for more details.<br>
-                <i>Available on <a href="http://kenai.com/projects/btrace/downloads/directory/uc">BTrace Update Center</a></i>
+                <i>Available on VisualVM Plugins Center</i>
                 </p>
                 
                 <hr/>
