Releasing VisualVM 1.2.2 - release date fixed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2365 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -50,8 +50,8 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
-                <p><span class="news_date">December 14th, 2009:</span> VisualVM 1.2.2 released. This release upgrades the
-                    underlying framework to the NetBeans Platform 6.8 including various profiler improvements and fixes.
+                <p><span class="news_date">January 6th, 2010:</span> VisualVM 1.2.2 released. This release upgrades the
+                    underlying framework to the NetBeans Platform 6.8 and delivers several performance improvements and bugfixes.
                     The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
                     <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release122"><code>release122</code></a> branch.
                 </p>
