--- a/www/relnotes.html
+++ b/www/relnotes.html
@@ -112,7 +112,7 @@
                         <li>Profiling engine bugfixes
                         </li>
 
-                        <li>Support for BTrace 1.1
+                        <li>BTrace4VisualVM plugin introduces <a href="http://kenai.com/projects/btrace/forums/forum/topics/2262-BTrace-1-1-Released)">BTrace 1.1</a>
                         </li>
 
                         <li>Minor appearance improvements for Mac OS X
