JDK 6 Update 18 released
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2376 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,12 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">November 20th, 2009:</span> The OSGi plugin
+                    has been released on VisualVM 1.2 & 1.2.1 Plugins Center. The plugin enables
+                    basic management of OSGi platforms via JMX. For detailed description and
+                    installation instructions visit the <a href="http://wiki.chameleon.ow2.org/xwiki/bin/view/Main/AdminTools">plugin page</a>.
+                </p>
+
                 <p><span class="news_date">November 9th, 2009:</span> VisualVM 1.2.1 released. This is purely a bugfix release, see the <a href="https://visualvm.dev.java.net/issues/buglist.cgi?Submit+query=Submit+query&component=visualvm&resolution=FIXED&target_milestone=1.2.1&email1=&emailtype1=exact&emailassigned_to1=1&email2=&emailtype2=exact&emailreporter2=1&issueidtype=include&issue_id=&changedin=&votes=&chfield=creation_ts&chfieldfrom=&chfieldto=Now&chfieldvalue=&short_desc=&short_desc_type=fulltext&long_desc=&long_desc_type=fulltext&issue_file_loc=&issue_file_loc_type=fulltext&status_whiteboard=&status_whiteboard_type=fulltext&field0-0-0=noop&type0-0-0=noop&value0-0-0=&cmdtype=doit&order=Reuse+same+sort+as+last+time">list of fixed bugs</a>.
                     The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
                     <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release121"><code>release121</code></a> branch.
