--- a/www/releases.html
+++ b/www/releases.html
@@ -93,7 +93,7 @@
                             </td>
 
                             <td>
-                                <div>not released yet</div>
+                                <div><b>JDK 6 Update 18</b><br><small style="margin-left: 10px;">Released: January 13th, 2010, <a href="http://java.sun.com/javase/6/webnotes/6u18.html">Release Notes</a></small></div>
                             </td>
                         </tr>
 
