--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,11 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">January 13th, 2010:</span> JDK 6 Update 18 released, it contains Java VisualVM tool
+                    based on the VisualVM 1.2.1. Latest Sun JDK 6 update can be downloaded
+                    <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
+                </p>
+
                 <p><span class="news_date">January 6th, 2010:</span> VisualVM 1.2.2 released. This release upgrades the
                     underlying framework to the NetBeans Platform 6.8 and delivers several performance improvements and bugfixes.
                     The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
@@ -60,12 +65,6 @@
                     is now available on the VisualVM 1.2 & 1.2.1 Plugins Center. With this plugin
                     you can create, deploy and save BTrace tracing scripts directly from the VisualVM. For more information
                     visit the <a href="http://kenai.com/projects/btrace/pages/Home">plugin page</a>.
-                </p>
-
-                <p><span class="news_date">November 20th, 2009:</span> The OSGi plugin
-                    has been released on VisualVM 1.2 & 1.2.1 Plugins Center. The plugin enables
-                    basic management of OSGi platforms via JMX. For detailed description and
-                    installation instructions visit the <a href="http://wiki.chameleon.ow2.org/xwiki/bin/view/Main/AdminTools">plugin page</a>.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
