--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -22,7 +22,7 @@
         <br>
 
         <h3>VisualVM In Action</h3>
-        <p>See the VisualVM features in this short screencast originally introduced at java.sun.com:</p>
+        <p>See the VisualVM features in this short screencast:</p>
         <p><embed src="http://blip.tv/play/AeGPcZKdZQ" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="400" height="330"></embed></p>
 
         <br>
