TDA 2.2 plugin release
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2413 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,10 @@
             <div id="news" style="margin-bottom: 10px;">
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
+                <p><span class="news_date">February 26th, 2010:</span> Thread Dump Analyzer plugin has been updated on the VisualVM 1.2.2 Plugin Center to version 2.2.
+                    Detailed information can be found in the <a href="http://www.jroller.com/dumpster/entry/tda_2_2_release">TDA 2.2 release announcement</a>.
+                </p>
+
                 <p><span class="news_date">January 13th, 2010:</span> JDK 6 Update 18 released, it contains Java VisualVM tool
                     based on the VisualVM 1.2.1. Latest Sun JDK 6 update can be downloaded
                     <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
@@ -59,12 +63,6 @@
                     underlying framework to the NetBeans Platform 6.8 and delivers several performance improvements and bugfixes.
                     The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
                     <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release122"><code>release122</code></a> branch.
-                </p>
-
-                <p><span class="news_date">November 25th, 2009:</span> The BTrace plugin
-                    is now available on the VisualVM 1.2 & 1.2.1 Plugins Center. With this plugin
-                    you can create, deploy and save BTrace tracing scripts directly from the VisualVM. For more information
-                    visit the <a href="http://kenai.com/projects/btrace/pages/Home">plugin page</a>.
                 </p>
 
                 <p class="previous_link"><a href="news.html">news archive</a>
