--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,12 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">November 25th, 2009:</span> The BTrace plugin
+                    is now available on the VisualVM 1.2 & 1.2.1 Plugins Center. With this plugin
+                    you can create, deploy and save BTrace tracing scripts directly from the VisualVM. For more information
+                    visit the <a href="http://kenai.com/projects/btrace/pages/Home">plugin page</a>.
+                </p>
+
                 <p><span class="news_date">November 20th, 2009:</span> The OSGi plugin
                     has been released on VisualVM 1.2 & 1.2.1 Plugins Center. The plugin enables
                     basic management of OSGi platforms via JMX. For detailed description and
