--- a/www/saplugin.html
+++ b/www/saplugin.html
@@ -49,7 +49,7 @@
 SA Plugin makes Serviceability Agent's features and utilities available in VisualVM. Serviceability Agent is an out-of-process snapshot debugger for Hotspot Java Virtual Machine. It can be used to explore Java Objects and Hotspot Data Structures in running processes as well as core files. More details here: 
 <a href=http://www.usenix.org/events/jvm01/full_papers/russell/russell_html/index.html> http://www.usenix.org/events/jvm01/full_papers/russell/russell_html/index.html</a> </p>
 
-<p> SA-Plugin brings those powerful features of Serviceability Agent to VisualVM Ð All-in-One Java Troubleshooting Tool. This Plugin makes SA utilities available in the following four panels in VisualVM:</p>
+<p> SA-Plugin brings those powerful features of Serviceability Agent to VisualVM - All-in-One Java Troubleshooting Tool. This Plugin makes SA utilities available in the following four panels in VisualVM:</p>
 <p>
 <b>Java Threads / Java Stack Trace: </b>
 <ul>
