SA plugin released
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2454 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,12 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">January 6th, 2010:</span> VisualVM 1.2.2 released. This release upgrades the
+                    underlying framework to the NetBeans Platform 6.8 and delivers several performance improvements and bugfixes.
+                    The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
+                    <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release122"><code>release122</code></a> branch.
+                </p>
+
                 <p><span class="news_date">November 25th, 2009:</span> The BTrace plugin
                     is now available on the VisualVM 1.2 & 1.2.1 Plugins Center. With this plugin
                     you can create, deploy and save BTrace tracing scripts directly from the VisualVM. For more information
