--- a/www/releases.html
+++ b/www/releases.html
@@ -93,6 +93,8 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 6 Update 19</b><br><small style="margin-left: 10px;">Released: March 30th, 2010, <a href="http://java.sun.com/javase/6/webnotes/6u19.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 6 Update 18</b><br><small style="margin-left: 10px;">Released: January 13th, 2010, <a href="http://java.sun.com/javase/6/webnotes/6u18.html">Release Notes</a></small></div>
                             </td>
                         </tr>
