Removing links to IntelliJ IDEA VisualVM Plugin, not supported since VisualVM 1.2
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2589 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/download.html
+++ b/www/download.html
@@ -54,7 +54,7 @@
             <a name="download"></a>
             <h3>Download</h3>
             <div style="background: #f0f1f2; padding: 10px; padding-left: 20px; margin-bottom: 10px;">
-                <div><a href="https://visualvm.dev.java.net/files/documents/7163/146709/visualvm_122.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM 1.2.2</span></a> (.zip, 10.2MB)<span style="margin-left: 15px; margin-right: 15px;">|</span>IDE integration: <a href="eclipse-launcher.html">Eclipse IDE</a>, <a href="http://plugins.intellij.net/plugin/?id=3749">IntelliJ IDEA</a> <small>(3<sup>rd</sup> party)</small></div>
+                <div><a href="https://visualvm.dev.java.net/files/documents/7163/146709/visualvm_122.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM 1.2.2</span></a> (.zip, 10.2MB)<span style="margin-left: 15px; margin-right: 15px;">|</span>IDE integration: <a href="eclipse-launcher.html">Eclipse IDE</a></div>
                 <div style="padding-top: 5px;"><small><a href="https://visualvm.dev.java.net/files/documents/7163/146710/visualvm_122-ml.zip"><b>Multi-language</b></a> (.zip, 10.9MB, English / Japanese <img src="ja/images/japanese.png" style="border: 0px; vertical-align: bottom;"/> / Chinese <img src="zh_CN/images/simplified_chinese.png" style="border: 0px; vertical-align: bottom;"/>)</small></div>
             </div>
             
