JDK 6u21 announcement on frontpage news
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2705 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,11 @@
             <h3>News</h3>
             <div id="news">
 
+                <p><span class="news_date">January 13th, 2010:</span> JDK 6 Update 18 released, it contains Java VisualVM tool
+                    based on the VisualVM 1.2.1. Latest Sun JDK 6 update can be downloaded
+                    <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
+                </p>
+
                 <p><span class="news_date">January 6th, 2010:</span> VisualVM 1.2.2 released. This release upgrades the
                     underlying framework to the NetBeans Platform 6.8 and delivers several performance improvements and bugfixes.
                     The tool can be downloaded from the <a href="download.html">Download</a> page, sources are available in
