Farewell Sun JDK (frontpage only)
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2707 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
                 <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
 
                 <p><span class="news_date">July 7th, 2010:</span> JDK 6 Update 21 released, it contains Java VisualVM tool
-                    based on the VisualVM 1.2.2. Latest Sun JDK 6 update can be downloaded
+                    based on the VisualVM 1.2.2. Latest JDK 6 update from Oracle can be downloaded
                     <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
                 </p>
 
